# training-Python

./: README.md
restApi/: app.py  create_data.py  face_recognize.py  haarcascade_frontalface_default.xml  pyproject.toml
