[tool.poetry]
name = "testing"
version = "0.0.1"
description = "Only Testing"
authors = ["yodji09"]

[tool.poetry.dependencies]
python = "3.6"
flask = "^1.1.2"
flask-restful = "^0.3.8"
flasgger = "^0.9.4"
opencv-python = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
